what we do spacing fix

--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -7,7 +7,9 @@
 
 .page-title {
     color: #fce138;
+    display: inline-block;
     border-bottom: 4px solid #fce138;
+    padding: 0 80px 15px 80px;
     font-weight: normal;
     font-size: 42px;
     font-style: italic;
@@ -22,7 +24,6 @@
     width: 80%;
     margin: auto;
     color: #024e76;
-
 }
 
 .secondary-content h3 {
