--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,11 @@ section {
     right: 140px;
 }
 
+.hero-form h3 {
+    font-size: 24px;
+    margin: 0;
+}
+
 .hero-form p {
     margin: 5px 0 15px 0;
 }
